# tesseract

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ape-config.yaml  pyproject.toml
.build/: __local__.json  main.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-mainnet.yml  deploy-testnet.yml  pr-checks.yml
artifacts/: TesseractSimple.json
config/: networks.json
contracts/: AtomicSwapCoordinator.vy  FeeCollector.vy  RelayerRegistry.vy  TesseractBuffer.vy  TesseractBufferFixed.vy  TesseractGovernor.vy  TesseractSimple.vy  TesseractStaking.vy  TesseractToken.vy  main.vy
docs/: API_DOCUMENTATION.md  API_DOCUMENTATION_UPDATED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_UPDATED.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  SECURITY_GUIDELINES.md  SYSTEM_ARCHITECTURE.md  TESTING_FRAMEWORK.md  TESTNET_ROADMAP.md
docs/a16z-startup-school/: a16z-startup-school.md
docs/roadmap/: pt-mvp.md
documentation/: mkdocs.yml
documentation/docs/: contributing.md  index.md
documentation/docs/api/: contract-api.md  events.md  python-sdk.md
documentation/docs/concepts/: cross-rollup-coordination.md  overview.md  security-model.md  transaction-lifecycle.md
documentation/docs/examples/: basic-usage.md  cross-chain-defi.md  dependency-chains.md
documentation/docs/getting-started/: first-transaction.md  installation.md  quick-start.md
documentation/docs/guides/: deployment.md  monitoring.md  multi-chain.md  troubleshooting.md
infrastructure/terraform/: README.md  main.tf  variables.tf
infrastructure/terraform/environments/production/: backend.tf  terraform.tfvars
infrastructure/terraform/environments/staging/: backend.tf  terraform.tfvars
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/rds/: main.tf
infrastructure/terraform/modules/secrets/: main.tf
relayer/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
relayer/config/: default.toml  production.toml
relayer/migrations/: 001_init.sql
relayer/monitoring/: alerting_rules.yml  prometheus.yml
relayer/monitoring/grafana/provisioning/dashboards/: dashboards.yml  tesseract-overview.json
relayer/src/: config.rs  error.rs  main.rs
relayer/src/api/: mod.rs
relayer/src/chain/: finality.rs  listener.rs  mod.rs  provider.rs
relayer/src/coordination/: dependency.rs  engine.rs  mod.rs
relayer/src/events/: mod.rs
relayer/src/metrics/: mod.rs
relayer/src/state/: manager.rs  mod.rs
relayer/src/tx/: gas.rs  mod.rs  nonce.rs  sender.rs
scripts/: deploy.py  deploy_full_testnet.py  deploy_multichain.py  deploy_simple.py  deploy_tokenomics.py  emergency.py  health_check.py  initialize.py  manage_operators.py  monitor_events.py  setup_environment.py  test_basic.py  test_compilation.py  verify_deployment.py  verify_on_explorer.py
tesseract/: __init__.py
tests/: __init__.py  conftest.py  sequence.py  test_access_control.py  test_compilation.py  test_defi_security.py  test_integration.py  test_safety.py  test_tokenomics.py  test_transactions.py  test_validation.py
tests/integration/: __init__.py  test_cross_chain.py  test_load.py
