[tool.poetry]
name = "tesseract"
version = "0.1.0"
description = "Universal Atomic Composability for Rollups"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"
packages = [{include = "tesseract"}]

[tool.poetry.dependencies]
python = "^3.11"
vyper = "^0.3.10"
web3 = "^6.0.0"
pytest = "^7.0.0"
python-dotenv = "^1.0.0"
eth-utils = "^2.0.0"
eth-tester = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"