[project]
name = "tesseract"
version = "0.1.0"
description = "Universal Atomic Composability for Rollups"
authors = [{name = "Dipankar Sarkar", email = "me@dipankar.name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "vyper>=0.3.10,<0.4.0",
    "web3>=6.11.0,<6.12.0",
    "pytest>=7.0.0,<8.0.0",
    "python-dotenv>=1.0.0",
    "eth-utils>=2.0.0,<3.0.0",
    "eth-tester[py-evm]>=0.12.0b1,<0.13.0",
    "eth-typing>=3.0.0,<4.0.0",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]
test = [
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tesseract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow-running tests"
]

[tool.coverage.run]
source = ["tesseract", "scripts"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert statements
