[package]
name = "tesseract-relayer"
version = "0.1.0"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
description = "High-performance multi-chain relayer for Tesseract cross-rollup atomic swaps"
license = "MIT"
repository = "https://github.com/anthropics/tesseract"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Ethereum interaction - using alloy (modern replacement for ethers-rs)
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-sol-types = "0.7"

# Legacy ethers for broader compatibility (will migrate to alloy fully)
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Web server for health/status API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"

# Cryptography
sha3 = "0.10"

# Regex and lazy static
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.9"
testcontainers = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "tesseract-relayer"
path = "src/main.rs"
